feat: autentication jig
